# StellarVault

./: .gitignore  ARCHITECTURE.md  README.md  RELEASE_NOTES.md  package.json
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/analytics/: Cargo.toml
contracts/analytics/src/: lib.rs
contracts/vaultlock/: Cargo.toml  deploy.sh  testnet_config.json
contracts/vaultlock/src/: lib.rs  test.rs
contracts/vaultlock/test_snapshots/test/: test_create_and_deposit.1.json  test_early_withdraw_with_penalty.1.json  test_invalid_deposit_amount.1.json  test_invalid_goal_amount.1.json  test_withdraw_locked_fails.1.json  test_withdraw_when_goal_reached.1.json  test_withdraw_when_time_reached.1.json
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: AnalyticsModal.tsx  CreateVaultModal.tsx  DashboardStats.tsx  DepositModal.tsx  EarlyWithdrawModal.tsx  FeedbackModal.tsx  Navbar.tsx  SimulationPanel.tsx  ToastContainer.tsx  VaultCard.tsx  VaultGrid.tsx
frontend/src/types/: vault.ts
frontend/src/utils/: exporter.ts
proof/: README.md  ci-pipeline.png.placeholder  demo-video-link.md  feedback-summary.md  mobile-ui.png.placeholder  tests-output.png.placeholder  wallet-interactions.png.placeholder
