[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "=21.0.0"
ed25519-dalek = "=2.1.1"

[dev-dependencies]
soroban-sdk = { version = "=21.0.0", features = ["testutils"] }
ed25519-dalek = "=2.1.1"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
